@@ -1,5 +1,7 @@
 2011-03-19  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-basic.el (and): Set mouse event for semantic.
+
 	* init-misc.el ("tabbar"): Add tabbar-ruler.el
 
 	* init-basic.el ("filecache"): Add filecache setting.
